# flow-pilot

./: .cursorrules  .gitignore  PLAN.md  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/agent/: engine.py  intent.py  responder.py  state.py
backend/app/kb/tasks/: open_account.yaml
backend/app/schemas/: task_schema.py
backend/tests/: test_engine.py  test_intent.py  test_responder.py  test_state.py
frontend/: index.html  vite.config.js
frontend/public/flowpilot/: flowpilot.esm.min.js  flowpilot.umd.min.js
frontend/src/: main.js  sdk-bridge.js  style.css
frontend/src/api/: chat.js
frontend/src/components/: ChatPanel.vue
frontend/src/guide/: GuideApp.vue  GuideStep.vue  GuideTooltip.vue  HighlightBox.vue  index.js  mapping.js  mapping.yaml  styles.js
